welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:1: error: ';' expected but 'else' found.
  def posFinale () {if (estFaceMur()) {if (getDirection() == Direction.EST) {gauche(); if (estFaceMur()) {return True} else {avance();gauche()}} else {if (getDirection() == Direction.OUEST) {droite();if (estFaceMur()){return True} else{avance();droite()}}}; else {false}}
                                                                                                                                                                                                                                                                  ^SnakeBuggle:3: error: Missing closing brace `}' assumed here
override def run() {
^